# Optimized_Mobile_Object_Recognition

./: README.md  pyproject.toml  report.md
compression/in_training/: distillation.py  quantization.py
compression/post_training/: graph_optimization.py  pruning.py  quantization.py
model_compression/in_training/: distillation.py  pruning.py  quantization.py
model_compression/post_training/: graph_optimization.py  pruning.py  quantization.py
models/in_training/distillation/temp1-0_alpha0-5_epochs1000/: model.pth
models/mobile/: optimized_model_mobile.pt
models/pipeline/prune_graphopt_quantize_cpu/: model.pt
notebooks/: 01_baseline.ipynb  02_compression.ipynb  03_pipeline.ipynb  04_deployment.ipynb
results/baseline_mobilenet/: metrics.json  training_stats.json
results/pipeline/prune_graphopt_quantize_cpu/: pipeline_metrics.json
results/pipeline/prune_quantize_graphopt_cpu/: pipeline_metrics.json
results/prune_graphopt_quantize_cpu/: comparison.json  metrics.json
results/prune_graphopt_quantize_cpu/step_1_post_training_pruning/: metrics.json
results/prune_graphopt_quantize_cpu/step_2_graphopt_dynamic_quantization/: metrics.json
results/prune_quantize_graphopt_cpu/: comparison.json  metrics.json  requirements_met.json
results/prune_quantize_graphopt_cpu/step_1_post_training_pruning/: metrics.json
results/prune_quantize_graphopt_cpu/step_2_dynamic_quantization/: metrics.json
results/prune_quantize_graphopt_cpu/step_3_graph_optimization/: metrics.json
utils/: compression.py  evaluation.py  model.py
(+51 files in other folders)
