[project]
name = "optimized-mobile-object-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "markdown>=3.3.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "tensorboard>=2.5.0",
    "thop>=0.0.31",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.61.0",
]
